--- a/style.css
+++ b/style.css
@@ -6,24 +6,27 @@
 
 body {
   width: 100%;
+  height: 100vh;
   font: normal bold 16px/normal tahoma;
-  background-color: black;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 article{
   width:300px;
   text-align: center;
-  background-color: #69b04d;
+  background-color: #04b3c8;
   border-radius: 10px;
-  margin: 50px auto 20px;
   padding: 5px;
   overflow: hidden;
-  box-shadow: 3px 3px 10px #ccc;
+  box-shadow: 10px 10px 10px #323232;
 }
 
 article h3{
   padding: 10px;
-  color: #fff;
+  color: #323232;
 }
 
 article .count{
@@ -32,7 +35,7 @@ article .count{
 
 article #timer{
   padding: 5px;
-  color: crimson;
-  background-color: aliceblue;
+  color: #04b3c8;
+  background-color: #e8e8e8;
   border-radius: 2px;
 }
